--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .DS_Store
 .vscode
+.venv
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+data/
 .env.development
 .env.test
 .env.production
