--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "A EDTH hackathon project, encrypting analog fpv vidoe signals."
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "ipykernel>=7.1.0",
+    "numpy>=2.0",
+    "opencv-python>=4.10",
+]
