--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ camConverter/assets/test_pattern_scrambled.mp4
 camConverter/assets/test_pattern_scrambled.analog
 camConverter/assets/test_pattern_scrambled_line_rotation.mp4
 camConverter/assets/test_pattern_scrambled_line_rotation.analog
+
+decoded/
